# PyWake

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pypirc  .zenodo.json  LICENSE  MANIFEST.in  README.md  git_utils.py  new_release.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
_notebooks/: make_notebooks.py  notebook.py
_notebooks/elements/: BastankhahGaussian.ipynb  Hornsrev1Site.ipynb  HornsrevSite.ipynb  IEA37SimpleBastankhahGaussian.ipynb  IEA37Site.ipynb  IEA37Turbine.ipynb  IntroWindTurbines.ipynb  V80.ipynb  WindTurbines.ipynb  cmp_wakemodels.ipynb  doc_setup.ipynb  fuga.ipynb  hornsrev_layout_optimization_exercise.ipynb  noj.ipynb  noj_validation_exercise.ipynb  noj_validation_exercise_solution.ipynb  tutorial_setup.ipynb
_notebooks/templates/: windturbines.ipynb
docs/: Makefile  conf.py  index.rst  installation.rst  logo.eps  make.bat  make_pdf.py  notebook.py  validation.rst
docs/_static/: EngineeringModels.eps  EngineeringModels.vsdx  WF_Site_WindTurbines.eps  WF_Site_WindTurbines.vsdx  autograd.vsdx  class_diagram.vsdx
docs/api/: EngineeringWindFarmModels.rst  FlowMap.rst  PredefinedEngineeringWindFarmModels.rst  SimulationResult.rst  Site.rst  WindFarmModel.rst  WindTurbines.rst
docs/notebooks/: BastankhahGaussian.ipynb  BlockageDeficitModels.ipynb  ChangeLog.ipynb  DeflectionModels.ipynb  EngineeringWindFarmModels.ipynb  Gradients.ipynb  GroundModels.ipynb  Hornsrev1Site.ipynb  HornsrevSite.ipynb  IEA37SimpleBastankhahGaussian.ipynb  IEA37Site.ipynb  IEA37Turbine.ipynb  Introduction.ipynb  Noise.ipynb  Optimization.ipynb  Overview.ipynb  Publications.ipynb  Quickstart.ipynb  RotorAverageModels.ipynb  RunWindFarmSimulation.ipynb  Site.ipynb  SuperpositionModels.ipynb  TurbulenceModels.ipynb  V80.ipynb  Validation.ipynb  WakeDeficitModels.ipynb  WindTurbines.ipynb  YawMisalignment.ipynb  cmp_wakemodels.ipynb  eddy_viscosity_model.ipynb  fuga.ipynb  gradients_parallellization.ipynb  hornsrev_layout_optimization_exercise.ipynb  noj.ipynb  noj_validation_exercise.ipynb  noj_validation_exercise_solution.ipynb
docs/source/: conf.py  exercises.rst  index.rst  install_python.rst  installation.rst  introduction.rst  reference_guide.rst  tutorials.rst  validation.rst
docs/validation_report/: generate_validation_figures.py  tests.py
py_wake/: __init__.py  aep_calculator.py  flow_map.py  git_utils.py  gradients.py  superposition_models.py  turbulence_model.py  wake_model.py  wind_turbines.py
py_wake/aep/: __init__.py  _aep.py
py_wake/literature/: noj.py  (+6 more)
recipe/: meta.yaml
tutorials/: windturbines.ipynb
(+642 files in other folders)
