[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"


[project]
name = "py_wake"
authors = [
  { name="DTU Wind Energy"},
  { name="Mads M. Pedersen", email="mmpe@dtu.dk" },
]
description = "Open source static wake modeling framework from DTU"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "matplotlib",
  "numpy",
  "xarray", "netcdf4", "h5netcdf",
  "autograd",
  "pyyaml",
  "scipy",
  "tqdm",
  "joblib>=1.3",
]
dynamic = ["version"]

[project.urls]
'Documentation'= 'https://topfarm.pages.windenergy.dtu.dk/PyWake/'
'Changelog'= 'https://topfarm.pages.windenergy.dtu.dk/PyWake/notebooks/ChangeLog.html'
'Source code'= 'https://gitlab.windenergy.dtu.dk/TOPFARM/PyWake'
'Issue tracker'= 'https://gitlab.windenergy.dtu.dk/TOPFARM/PyWake/-/issues'

[project.optional-dependencies]
test  = [ 'pytest',  # for testing
          'pytest-cov',  # for calculating coverage
          'psutil',  # memory profiling
          'memory_profiler',  # memory profiling
          'line_profiler',  # to check speed
          'scikit-learn',  # MinMaxScaler
          'surrogates-interface',
          'tensorflow',  # load surrogates
        ] 
docs = [
          'sphinx',  # generating documentation
          'sphinx_rtd_theme',  # docs theme
          'ipywidgets',  # notebook widgets
          "numpydoc", 
          "nbsphinx", 
          "sphinx_copybutton", 
          "sphinx_sitemap", 
          "ipympl", 
          "ipykernel",
          "pypandoc",
          "topfarm",
        ]

[tool.setuptools]
packages = ["py_wake"]

[tool.setuptools.package-data]
py_wake = ['examples/data/iea37/*.yaml',
           'examples/data/*.npz',
           'tests/test_files/fuga/2MW/Z0=0.03000000Zi=00401Zeta0=0.00E+00/*.*',
           'tests/test_files/fuga/2MW/Z0=0.00408599Zi=00400Zeta0=0.00E+00/*.*',
           'tests/test_files/fuga/2MW/*.nc',
           'examples/data/iea34_130rwt/*/*/*.h5',
           'examples/data/iea34_130rwt/*/*/*.json',
           'examples/data/ParqueFicticio/*.grd',
           'examples/data/NEG-Micon-2750.wtg',
           'examples/data/Vestas V112-3.0 MW.wtg',
           'rotor_avg_models/gaussian_overlap_.02_.02_128_512.nc'
           ]

[tool.setuptools_scm]
version_file = "py_wake/version.py"
